...
                    FocusTraversalOrder(
                      order: const NumericFocusOrder(1),
                      child: Focus(
                        key: const Key('focus_face_id'),
                        autofocus: true,
                        child: _PrimaryBigButton(
                          key: const Key('face_id_button'),
                          label: 'Sign in\nwith Face ID',
                          onPressed: () => context.go(AppRoutes.dashboard),
                          icon: CupertinoIcons.viewfinder,
                        ),
                      ),
                    ),
...
